@@ -20,21 +20,5 @@ account_DATA = \
   acctchrt_spouseretire.gnucash-xea
 
 EXTRA_DIST = \
-  acctlist_brokerage.gnucash-xea \
-  acctchrt_business.gnucash-xea \
-  acctlist_carloan.gnucash-xea \
-  acctlist_cdmoneymkt.gnucash-xea \
-  acctchrt_checkbook.gnucash-xea \
-  acctlist_childcare.gnucash-xea \
-  acctlist_common.gnucash-xea \
-  acctlist_eduloan.gnucash-xea \
-  acctlist_fixedassets.gnucash-xea \
-  acctlist_homeloan.gnucash-xea \
-  acctlist_homeown.gnucash-xea \
-  acctlist_otherloan.gnucash-xea \
-  acctlist_renter.gnucash-xea \
-  acctlist_retiremt.gnucash-xea \
-  acctlist_spouseinc.gnucash-xea \
-  acctlist_spouseretire.gnucash-xea \
   ${account_DATA} \
   .cvsignore
